--- a/ProyectoApi/Properties/launchSettings.json
+++ b/ProyectoApi/Properties/launchSettings.json
@@ -15,7 +15,7 @@
       "launchUrl": "swagger/index.html",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development",
-        "DATABASE": "Data Source=DESKTOP-1CLUKL9;Initial Catalog=PantronesDisenio;User ID=sa;Password=1234"
+        "DATABASE": "Data Source=DESKTOP-1CLUKL9;Initial Catalog=ProyectoApi;User ID=sa;Password=1234"
       }
     },
     "ProyectoApi": {
@@ -25,7 +25,7 @@
       "applicationUrl": "https://localhost:5001;http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development",
-        "DATABASE": "Data Source=DESKTOP-1CLUKL9;Initial Catalog=PantronesDisenio;User ID=sa;Password=1234"
+        "DATABASE": "Data Source=DESKTOP-1CLUKL9;Initial Catalog=ProyectoApi;User ID=sa;Password=1234"
       }
     }
   }
